Alignment and Compatibility Issue Resolving

--- a/static/react/src/assets/css/style.css
+++ b/static/react/src/assets/css/style.css
@@ -5663,8 +5663,8 @@ color: #FFF; }
 	/* this is probably redundant
     position: fixed;
     z-index: 3;
-	width:100%;*/
-	background-color: #f8f8f8;
+	width:100%;
+	background-color: #f8f8f8;*/
 	float: left;
 }
 /* Dropdown tweek */
@@ -15292,6 +15292,75 @@ th .ma-checkbox.inline, td .ma-checkbox.inline { margin-left: 5px; }
   flex-wrap: wrap; }
 .p-multiselect-item label {text-overflow:ellipsis; white-space: nowrap; overflow:hidden; width:130px; }
 .form-horizontal .control-label { text-align:left; }
+
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+  /* For landscape layouts only */
+  .newCardTitle { width: 80%; }
+  
+}
+
+@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) {
+	.navbar-header .navbar-brand { width: 222px; }
+	.navbar-nav {
+    margin: 1px -15px;
+}
+}
+/* iphone 3 */
+    @media only screen and (min-device-width: 320px) and (max-device-height: 480px) and (-webkit-device-pixel-ratio: 1) {
+		 .navbar-header .navbar-brand { width:230px; }
+		
+	}
+
+/* iphone 5 */
+@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
+	 .navbar-header .navbar-brand { width:180px; background-size: contain; }
+	 .navbar-nav { margin: 1px -15px; }
+	 .modal-content {     min-width: auto; }
+}
+
+/* iphone 6, 6s, 7, 8 */
+@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (-webkit-device-pixel-ratio: 2) { 
+	 .navbar-header .navbar-brand { width:230px; }
+}
+
+ /* iphone X */
+@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) { 
+ .navbar-header .navbar-brand  { width: 230px; }
+ .user-name { display:none; }
+ 
+}
+
+
+/* After Clicking on ViewSummary, List Of Analysis button alignment issues - resolved */
+.sticky-container {
+	    top: 42% !important;
+}
+
+/* Login Page - Responsive */
+.ma-login .ma-content-left {
+	    background-size: cover;
+}
+
+/* Portrait */
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+	  .newCardTitle { width: 82%; }
+}
+
+.slick-next:focus, .slick-prev:focus {
+	background-color:#FFFFFF;
+}
+
+.newStoryCard h2 { font-size: 1.9em; }
+.newStoryCard h2 .fa {
+    vertical-align: middle;
+}
+
+
 /**************** Css realated to developers, keep the source down ***/
 .binsLevelsHeight { display: block; height: 250px; overflow-x:hidden;}
 #prediction_dropdown{
